samesite 옵션으로 쿠키 이슈 해결해보자...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=blogserver
 spring.timezone=Asia/Seoul
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
